[UPDATE] Migration to Java 16 codebase